# PhysHOI

./: .gitignore  cleanrl_eval.py  cleanrl_ppo.py  env.py  install_with_pixi.txt  pyproject.toml  setup.py  single_file.py
gymtorch/: __init__.py  wrapper.py
gymtorch/gymtorch/: __init__.py
physhoi/: __init__.py
physhoi/data/cfg/: physhoi.yaml
physhoi/data/cfg/train/rlg/: physhoi.yaml
physhoi/env/tasks/: base_task.py  physhoi.py  task_wrappers.py  vec_task.py  vec_task_wrappers.py
physhoi/learning/: common_agent.py  physhoi_agent.py  physhoi_players.py  rlgpu.py
physhoi/norlg_learning/: amp_datasets.py  env.py  network.py  network_builder.py  physhoi_agent.py  physhoi_players.py  utils.py
physhoi/utils/: torch_utils.py
rl_games/: setup.py
rl_games/rl_games/common/: a2c_common.py
